test/classes/diten/breakList.good
3 4
breakList.chpl:4: error: halt reached - I Got you!
